--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.1.5"
+psycopg2 = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 
