--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^3.1.5"
 psycopg2 = "^2.8.6"
 psycopg2-binary = "^2.8.6"
+djangorestframework = "^3.12.2"
 
 [tool.poetry.dev-dependencies]
 
